--- a/src/static/package.json
+++ b/src/static/package.json
@@ -34,6 +34,8 @@
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
     "jquery": "^3.0.0",
+    "jwerty": "^0.3.2",
+    "moment": "^2.14.1",
     "node-sass": "^3.8.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
