--- a/src/static/package.json
+++ b/src/static/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "bootstrap-loader": "^1.0.10",
