--- a/src/static/package.json
+++ b/src/static/package.json
@@ -23,6 +23,15 @@
   },
   "homepage": "https://github.com/beeldengeluid/labo",
   "dependencies": {
+    "d3": "^4.1.0",
+    "jquery": "^3.0.0",
+    "jwerty": "^0.3.2",
+    "moment": "^2.14.1",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "searchkit": "^0.10.0"
+  },
+  "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
@@ -31,23 +40,14 @@
     "bootstrap-loader": "^1.0.10",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
-    "d3": "^4.1.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
-    "jquery": "^3.0.0",
-    "jwerty": "^0.3.2",
-    "moment": "^2.14.1",
     "node-sass": "^3.8.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
     "resolve-url-loader": "^1.5.0",
     "sass-loader": "^4.0.0",
-    "searchkit": "^0.10.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
-  },
-  "devDependencies": {
-    "babel-polyfill": "^6.9.1"
   }
 }
