--- a/src/static/.bootstraprc
+++ b/src/static/.bootstraprc
@@ -51,54 +51,54 @@ extractStyles: false
 styles:
 
   # Mixins
-  mixins: false
+  mixins: true
 
   # Reset and dependencies
-  normalize: false
-  print: false
-  glyphicons: false
+  normalize: true
+  print: true
+  glyphicons: true
 
   # Core CSS
-  scaffolding: false
-  type: false
-  code: false
-  grid: false
-  tables: false
-  forms: false
-  buttons: false
+  scaffolding: true
+  type: true
+  code: true
+  grid: true
+  tables: true
+  forms: true
+  buttons: true
 
   # Components
-  component-animations: false
-  dropdowns: false
-  button-groups: false
-  input-groups: false
-  navs: false
-  navbar: false
-  breadcrumbs: false
-  pagination: false
-  pager: false
-  labels: false
-  badges: false
-  jumbotron: false
-  thumbnails: false
-  alerts: false
-  progress-bars: false
-  media: false
-  list-group: false
-  panels: false
-  wells: false
-  responsive-embed: false
-  close: false
+  component-animations: true
+  dropdowns: true
+  button-groups: true
+  input-groups: true
+  navs: true
+  navbar: true
+  breadcrumbs: true
+  pagination: true
+  pager: true
+  labels: true
+  badges: true
+  jumbotron: true
+  thumbnails: true
+  alerts: true
+  progress-bars: true
+  media: true
+  list-group: true
+  panels: true
+  wells: true
+  responsive-embed: true
+  close: true
 
   # Components w/ JavaScript
-  modals: false
-  tooltip: false
-  popovers: false
-  carousel: false
+  modals: true
+  tooltip: true
+  popovers: true
+  carousel: true
 
   # Utility classes
-  utilities: false
-  responsive-utilities: false
+  utilities: true
+  responsive-utilities: true
 
 ### Bootstrap scripts
 scripts:
