--- a/src/static/package.json
+++ b/src/static/package.json
@@ -42,6 +42,8 @@
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
     "esdoc": "^0.4.7",
+    "eslint": "^3.1.1",
+    "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
