--- a/src/static/package.json
+++ b/src/static/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.0.0",
     "moment": "^2.14.1",
     "mousetrap": "^1.6.0",
+    "openseadragon": "^2.2.1",
     "react-autosuggest": "^3.9.0",
     "searchkit": "^0.10.0"
   },
