--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
-uWSGI==2.0.15
+Flask==0.12.1
+Jinja2==2.9.6
+MarkupSafe==1.0
+Werkzeug==0.12.1
 appdirs==1.4.3
 click==6.7
+defusedxml==0.4.1
+dm.xmlsec.binding==1.3.2
 elasticsearch==5.3.0
-Flask==0.12.1
 httplib2==0.10.3
+isodate==0.5.4
 itsdangerous==0.24
-Jinja2==2.9.6
-lxml==3.8.0
-MarkupSafe==1.0
+lxml==3.7.3
 packaging==16.8
 pyparsing==2.2.0
+python-saml==2.2.1
 requests==2.13.0
 six==1.10.0
+uWSGI==2.0.15
 urllib3==1.20
-Werkzeug==0.12.1
+wsgiref==0.1.2
