--- a/src/static/package.json
+++ b/src/static/package.json
@@ -17,7 +17,22 @@
     "url": "https://github.com/CLARIAH/wp5-mediasuite/issues"
   },
   "homepage": "https://github.com/CLARIAH/wp5-mediasuite",
+  "scripts": {
+    "dev": "webpack --env=dev",
+    "prod": "webpack --env=prod",
+    "watch": "webpack --watch"
+  },
   "dependencies": {
     "labo-components": "1.0.16"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.4"
   }
 }
