--- a/src/static/package.json
+++ b/src/static/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.1.0",
+    "babel-standalone": "^6.25.0",
+    "bootstrap-sass": "^3.3.7",
     "d3": "^4.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
