--- a/src/static/package.json
+++ b/src/static/package.json
@@ -28,9 +28,11 @@
     "bootstrap-sass": "^3.3.7",
     "d3": "^4.10.0",
     "font-awesome": "^4.7.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "jquery": "^3.2.1",
     "jwplayer": "^1.0.3",
-    "labo-components": "1.0.16",
+    "labo-components": "^1.0.18",
     "nouislider": "^10.1.0",
     "openseadragon": "^2.3.0"
   },
