added postinstall to make sure everything is build after npm install

--- a/src/static/package.json
+++ b/src/static/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "dev": "webpack --env=dev",
     "prod": "webpack --env=prod",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "postinstall" : "npm run prod"
   },
   "dependencies": {
     "@vimeo/player": "^2.1.0",
